<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/card_holder_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:labelFor="@+id/full_name_value"
            android:text="@string/full_name_required_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Cardholder Name:" />

        <EditText
            android:id="@+id/card_holder_name_value"
            style="@style/Widget.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text">

            <requestFocus />
        </EditText>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/card_number_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:labelFor="@+id/email_value"
            android:text="@string/card_required_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Card Number:" />

        <EditText
            android:id="@+id/card_number_value"
            style="@style/Widget.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cvv_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:labelFor="@+id/password_value"
            android:text="@string/cvv_required_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Password:" />

        <EditText
            android:id="@+id/cvv_value"
            style="@style/Widget.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberPassword" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expiry_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:labelFor="@+id/confirm_password_value"
            android:text="@string/expiry_required_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Expiry:" />

        <EditText
            android:id="@+id/confirm_password_value"
            style="@style/Widget.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberPassword" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_card_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_card_label"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pay_now_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_now_label"
            app:cornerRadius="24dp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>